[package]
name = "cron"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "http2"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
dashmap = "6.1"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
chrono = "0.4"
thiserror = "1.0"
